<resources>
    <string name="app_name">Diabetes_Prediction</string>
    <string name="title_activity_location_">Map</string>
    <string name="pick_time">Set Reminder</string>
    <string name="diabetes_prediction">Diabetes Prediction</string>
    <string name="medicine_remainder">Medicine Remainder</string>
    <string name="bmi">BMI</string>
    <string name="exercise">Exercise</string>
    <string name="search_location">Search Location</string>
    <string name="dashboard">Dashboard</string>
    <string name="welcome_to_diabetes_prediction">Welcome To</string>
    <string name="height">Height</string>
    <string name="bmi_calculator">BMI Calculator</string>
    <string name="enter_height_in_inches">Enter Height In Inches</string>
    <string name="weight">Weight</string>
    <string name="enter_weight_in_kg">Enter Weight In Kg</string>
    <string name="calculate">Calculate</string>
    <string name="glucose_level">Glucose level</string>
    <string name="enter_your_glucose_level">Enter Your Glucose level</string>
    <string name="blood_pressure">Blood Pressure</string>
    <string name="skin_thickness">Skin Thickness</string>
    <string name="enter_skin_thickness">enter skin thickness</string>
    <string name="eneter_your_blood_pressure">enter your blood pressure</string>
    <string name="insulin">Insulin</string>
    <string name="enter_your_insulin_level">enter your insulin level</string>
    <string name="enter_your_weight_in_kg">enter your weight in kg</string>
    <string name="enter_your_height_in_inches">enter your height in Inches</string>
    <string name="diabetes_pedigree_function">Diabetes Pedigree Function</string>
    <string name="enter_diabetes_function">enter diabetes function</string>
    <string name="age">Age</string>
    <string name="predict">Predict</string>
    <string name="enter_your_age">enter your age</string>
    <string name="_10_tips_to_control_diabetes">10 Tips To Control Diabetes</string>
    <string name="foods_to_eat_for_diabetes">Foods to Eat For Diabetes</string>
    <string name="best_exercises_for_diabetes">Best Exercises For Diabetes</string>
</resources>