<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/purple_500"
    tools:context=".Prediction">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/header_layout"
        android:orientation="horizontal"
        >
        <ImageView
            android:id="@+id/imgBack"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_keyboard_backspace_24"
            android:layout_gravity="center_vertical"
            app:tint="@color/white"
            android:contentDescription="@string/app_name" />


    </LinearLayout>
    <ScrollView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Diabetes Prediction"
                    android:textSize="25sp"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="10dp"
                    android:textColor="@color/purple_700"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/glucose_level"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:padding="5dp"
                    />
                <EditText

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/enter_your_glucose_level"
                    android:id="@+id/etGlucose"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/blood_pressure"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:padding="5dp"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/eneter_your_blood_pressure"
                    android:id="@+id/etBloodP"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/skin_thickness"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:padding="5dp"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/enter_skin_thickness"
                    android:id="@+id/etSkinThick"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/insulin"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:padding="5dp"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/enter_your_insulin_level"
                    android:id="@+id/etInsulin"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weight"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:padding="5dp"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/enter_your_weight_in_kg"
                    android:id="@+id/etWeight"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/height"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:padding="5dp"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/enter_your_height_in_inches"
                    android:id="@+id/etHeight"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/diabetes_pedigree_function"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:padding="5dp"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/enter_diabetes_function"
                    android:id="@+id/etDiabetesFunction"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/age"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:padding="5dp"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/enter_your_age"
                    android:id="@+id/etAge"
                    />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/predict"
                    android:textAllCaps="false"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:id="@+id/btnPredict"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Result: "
                    android:id="@+id/tvResult"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:textSize="25sp"
                    android:textColor="@color/black"
                    />



            </LinearLayout>
        </androidx.cardview.widget.CardView>


    </LinearLayout>
    </ScrollView>


</LinearLayout>
