<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/light_grey"
    tools:context=".ExerciseActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/header_layout"
        android:orientation="horizontal"
        >
        <ImageView
            android:id="@+id/imgBack"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_keyboard_backspace_24"
            android:layout_gravity="center_vertical"
            app:tint="@color/white"
            android:contentDescription="@string/app_name" />


    </LinearLayout>

    <ScrollView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <androidx.cardview.widget.CardView
                android:id="@+id/video1"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                app:cardUseCompatPadding="true"
                app:cardElevation="5dp"
                app:cardCornerRadius="5dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_10_tips_to_control_diabetes"
                        android:textSize="18sp"

                        />
                    <ImageView
                        android:layout_marginTop="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/video1"
                        android:contentDescription="@string/app_name" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/video2"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                app:cardUseCompatPadding="true"
                app:cardElevation="5dp"
                app:cardCornerRadius="5dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/foods_to_eat_for_diabetes"
                        android:textSize="18sp"

                        />
                    <ImageView
                        android:layout_marginTop="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/video2"
                        android:contentDescription="@string/app_name" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>


                </LinearLayout>



    </ScrollView>





</LinearLayout>
